--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -115,17 +115,16 @@
         @apply transition-shadow duration-500 delay-75 bg-gradient-multi bg-center;
     }
 
-    .bttn-gradient::after {
+    .bttn-gradient-arrow::after {
         @apply transition-all inline-block pl-2;
         content: "-->";
     }
 
-    .bttn-gradient:hover::after {
+    .bttn-gradient-arrow:hover::after {
         @apply pl-3;
     }
 
     .bttn-gradient:hover {
-        @apply box-glow-hover;
         background-size: 150% 100%;
     }
 
